# piper1-gpl

./: .gitignore  AGENTS.md  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  Fixes.txt  GEMINI.md  HISTORICAL_CONTEXT.md  Piper_Training.ipynb  README.md  build.ini  build.py  create_deb.sh  explanation.md  git_and_GitHub_tricks_link.md  mypy.ini  piper-tts-for-termux  pyproject.toml  pytest.ini  setup.py  حقاءق
.github/workflows/: build-libpiper.yml  libpiper.yml  publish.yml  test.yml
Architecture_materials/: Mermaid_02.md
docs/: ALIGNMENTS.md  API_HTTP.md  API_PYTHON.md  BUILDING.md  CLI.md  TRAINING.md  VOICES.md
libpiper/:  .clang-format  .gitignore  CMakeLists.txt  README.md  build_libpiper.bat  clean_text.cpp  piper.cpp  say.cpp
libpiper/app/cli/: CMakeLists.txt  CommandLine.cpp  helpers.cpp  helpers.h  main.cpp
libpiper/cmake/: run-executable.cmake  toolchain-ga.cmake  toolchain-gnu.cmake  toolchain-gw.cmake  toolchain-mingw.cmake  toolchain-msvc.cmake
libpiper/include/: json.hpp  piper.h  piper_impl.hpp  uni_algo.h  wavfile.hpp
libpiper/src/: espeak.patch  main.cpp  piper.cpp  wavfile.cpp
libpiper/src/main/: CMakeLists.txt  main.cpp
libpiper/src/main/utils/: main_utils.cpp  main_utils.hpp  process.cpp  process.hpp  wav_headers.cpp  wav_headers.hpp  wavfile.cpp  wavfile.hpp
libpiper/tests/: CMakeLists.txt  DownloadModel.cmake  test_main_utils.cpp  test_piper.cpp  test_process.cpp  test_wav_headers.cpp  test_wavfile.cpp
libpiper/tests/utils/: piper_test_assets.cpp  piper_test_assets.h
notebooks/: Piper_Training.ipynb
piper-speak/: CMakeLists.txt  README.md  audio.cpp  audio.h  piper-speak.cpp
script/: setup
src/piper/: __main__.py  config.py  download_voices.py  espeakbridge.c  http_server.py  patch_voice_with_alignment.py  phoneme_ids.py  phonemize_chinese.py  phonemize_espeak.py  phonemize_hebrew.py  voice.py  wsgi.py
src/piper/hebrew/: SOURCE  __init__.py  hebrew_ipa.py
src/piper/templates/: index.html
src/piper/train/: __main__.py  checkpoint.py  export_onnx.py  infer_torch.py
src/piper/train/vits/: dataset.py  lightning.py  models.py  modules.py  mos.py
tests/: __init__.py  test_chinese_phonemizer.py  test_espeak_phonemizer.py  test_espeakbridge.py  test_hebrew_phonemizer.py  test_http_server.py  test_installation_api.py  test_installation_cli.py  test_piper.py  test_voice.onnx.json  test_wsgi.py
